objects/Technical_Information__c/fields/Number_of_Main_Listings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Main_Listings__c</fullName>
    <label># of Main Listings</label>
    <summaryFilterItems>
        <field>Directory_Listing__c.Main_Listing__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Directory_Listing__c.Technical_Information__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>