objects/Technical_Information__c/fields/o_800_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>o_800_Service_Area__c</fullName>
    <label>800 Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US 50 States (US)</fullName>
            </value>
            <value>
                <fullName>US &amp; Canada (XA)</fullName>
            </value>
            <value>
                <fullName>US &amp; Caribbean (XB)</fullName>
            </value>
            <value>
                <fullName>US, Canada &amp; Caribbean (XC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>