objects/Technical_Information__c/fields/Off_Net_Provider_Quote__c.field-meta.xml
<CustomField>
    <fullName>Off_Net_Provider_Quote__c</fullName>
    <label>Off Net Provider Quote #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>