objects/Technical_Information__c/fields/Order_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Due_Date__c</fullName>
    <label>Order Due Date</label>
    <type>Date</type>
</CustomField>