objects/Technical_Information__c/fields/Phone_System_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Manufacturer__c</fullName>
    <label>Phone System Manufacturer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>