objects/Technical_Information__c/fields/Phone_System_Model__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Model__c</fullName>
    <label>Phone System Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>