objects/Technical_Information__c/fields/Physical_Interface_SecLoc__c.field-meta.xml
<CustomField>
    <fullName>Physical_Interface_SecLoc__c</fullName>
    <label>Physical Interface SecLoc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electrical (10/100 Mbps)</fullName>
            </value>
            <value>
                <fullName>Optical (1000 Mbps)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>