objects/Technical_Information__c/fields/Port_Type__c.field-meta.xml
<CustomField>
    <fullName>Port_Type__c</fullName>
    <label>Port Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>