objects/Technical_Information__c/fields/Power_Per_Rack__c.field-meta.xml
<CustomField>
    <fullName>Power_Per_Rack__c</fullName>
    <label>Power Per Rack</label>
    <type>TextArea</type>
</CustomField>