objects/Technical_Information__c/fields/PRI_Sessions__c.field-meta.xml
<CustomField>
    <fullName>PRI_Sessions__c</fullName>
    <label>PRI Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>