objects/Technical_Information__c/fields/Primary_Building_Access_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Building_Access_Contact_Name__c</fullName>
    <label>Primary Building Access Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>