objects/Technical_Information__c/fields/Private_Line_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Private_Line_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Line Configuration</label>
    <type>Checkbox</type>
</CustomField>