objects/Technical_Information__c/fields/Qty_and_Type_of_CKT__c.field-meta.xml
<CustomField>
    <fullName>Qty_and_Type_of_CKT__c</fullName>
    <label>Qty and Type of CKT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>