objects/Technical_Information__c/fields/Req_Ethernet_Ports__c.field-meta.xml
<CustomField>
    <fullName>Req_Ethernet_Ports__c</fullName>
    <label>Req. Ethernet Ports</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>