objects/Technical_Information__c/fields/SE_Approval__c.field-meta.xml
<CustomField>
    <fullName>SE_Approval__c</fullName>
    <label>SE Approval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>