objects/Technical_Information__c/fields/SecLoc_Protection__c.field-meta.xml
<CustomField>
    <fullName>SecLoc_Protection__c</fullName>
    <inlineHelpText>Electronic card protection</inlineHelpText>
    <label>SecLoc Protection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>