objects/Technical_Information__c/fields/Select_Menu__c.field-meta.xml
<CustomField>
    <fullName>Select_Menu__c</fullName>
    <label>Select Menu</label>
    <length>30</length>
    <type>Text</type>
</CustomField>