objects/Technical_Information__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Agreement</label>
    <type>Checkbox</type>
</CustomField>