objects/Technical_Information__c/fields/Service_Limits__c.field-meta.xml
<CustomField>
    <fullName>Service_Limits__c</fullName>
    <label>Service Exceptions</label>
    <type>TextArea</type>
</CustomField>