objects/Technical_Information__c/fields/Service_Multiplexing__c.field-meta.xml
<CustomField>
    <fullName>Service_Multiplexing__c</fullName>
    <label>Service Multiplexing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully Transparent</fullName>
            </value>
            <value>
                <fullName>P2P</fullName>
            </value>
            <value>
                <fullName>VLAN Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>