objects/Technical_Information__c/fields/SIP_Add_l_Treatment_Groups_Vendor_Checkl__c.field-meta.xml
<CustomField>
    <fullName>SIP_Add_l_Treatment_Groups_Vendor_Checkl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIP Add&#39;l Treatment Groups Vendor Checkl</label>
    <type>Checkbox</type>
</CustomField>