objects/Technical_Information__c/fields/SIP_IAD_Gear__c.field-meta.xml
<CustomField>
    <fullName>SIP_IAD_Gear__c</fullName>
    <label>SIP IAD Gear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adtran TA904</fullName>
            </value>
            <value>
                <fullName>Adtran TA908</fullName>
            </value>
            <value>
                <fullName>Adtran TA908e</fullName>
            </value>
            <value>
                <fullName>Adtran TA916</fullName>
            </value>
            <value>
                <fullName>Adtran TA916e</fullName>
            </value>
            <value>
                <fullName>Provisioning Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>