objects/Technical_Information__c/fields/SIP_Initial_Treatment_Vendor_Checklist__c.field-meta.xml
<CustomField>
    <fullName>SIP_Initial_Treatment_Vendor_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIP Initial Treatment Vendor Checklist</label>
    <type>Checkbox</type>
</CustomField>