objects/Technical_Information__c/fields/SIP_Proxy__c.field-meta.xml
<CustomField>
    <fullName>SIP_Proxy__c</fullName>
    <label>SIP Proxy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>