objects/Technical_Information__c/fields/SIP_related__c.field-meta.xml
<CustomField>
    <fullName>SIP_related__c</fullName>
    <label>SIP-related?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes – raw SIP, no add’l gear</fullName>
            </value>
            <value>
                <fullName>Yes – SIP to IAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>