objects/Technical_Information__c/fields/SIP_Trunking_Configuration_Options__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunking_Configuration_Options__c</fullName>
    <label>Configuration Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integra Providing SIP Proxy, NAT &amp; DHCP [SS_Int_P_N_D ]</fullName>
            </value>
            <value>
                <fullName>Integra Providing SIP Proxy Only [SS_Int_P_only]</fullName>
            </value>
            <value>
                <fullName>Customer Providing SIP Proxy, NAT &amp; DHCP [SS_Cus_P_N_D]</fullName>
            </value>
            <value>
                <fullName>Integra providing SIP Proxy, NAT, Method 3 Internet [VPN_Int_PN_M3INT]</fullName>
            </value>
            <value>
                <fullName>Integra providing SIP Proxy, NAT, No Internet [VPN_Int_PN_NoINT]</fullName>
            </value>
            <value>
                <fullName>Customer providing SIP Proxy, NAT, Method 3 Internet [VPN_Cus_PN_M3INT]</fullName>
            </value>
            <value>
                <fullName>Customer providing SIP Proxy, NAT, No Internet [VPN_Cus PN_NoINT]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>