objects/Technical_Information__c/fields/SIP_Trunking_Customer_s_Private_IP_Addr__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunking_Customer_s_Private_IP_Addr__c</fullName>
    <label>Customer&#39;s Private IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>