objects/Technical_Information__c/fields/SIP_Trunking_ISDN_PRI_E911_Third_Pa__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunking_ISDN_PRI_E911_Third_Pa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISDN-PRI E911 -- Third Party PS/ALI</label>
    <type>Checkbox</type>
</CustomField>