objects/Technical_Information__c/fields/SIP_Trunking_ISDN_PRI_Outbound_Caller__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunking_ISDN_PRI_Outbound_Caller__c</fullName>
    <label>ISDN-PRI Outbound Caller</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PBX Provide</fullName>
            </value>
            <value>
                <fullName>Single Number: BTN</fullName>
            </value>
            <value>
                <fullName>Single Number: Custom Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>