objects/Technical_Information__c/fields/SIP_Trunking_ISDN_PRI_Station_Level_LD__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunking_ISDN_PRI_Station_Level_LD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISDN-PRI Station-Level LD</label>
    <type>Checkbox</type>
</CustomField>