objects/Technical_Information__c/fields/SIP_Trunking_Supported_PBX_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>SIP_Trunking_Supported_PBX_Make_Model__c</fullName>
    <label>Supported PBX Make &amp; Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3CX C3x Phone System Release 10.0.24018.2322 to 10.0.24018.2322</fullName>
            </value>
            <value>
                <fullName>3CX Version 10.0.24018.2322 to Ver 12 SP 4</fullName>
            </value>
            <value>
                <fullName>Acme SBC 3000/4000 Release 5.1to 6.2</fullName>
            </value>
            <value>
                <fullName>Adtran NetVanta 7100 R2.7 to R10.9.5.E</fullName>
            </value>
            <value>
                <fullName>Allworx 6XXX Release 7.0.5.1 to 7.5.9.4</fullName>
            </value>
            <value>
                <fullName>Approved IPPBX Tech ICB Only</fullName>
            </value>
            <value>
                <fullName>Asterisk IPitomy Release 4.8.8</fullName>
            </value>
            <value>
                <fullName>Asterisk Open Source Release 1.4.2 to 1.8.4.4</fullName>
            </value>
            <value>
                <fullName>Avaya BCM50, IP Office R 6 to 9.0</fullName>
            </value>
            <value>
                <fullName>Bicom PBXWare Server Release 3.1 to 3.1</fullName>
            </value>
            <value>
                <fullName>Cisco CUBE ESBC Release 15.1</fullName>
            </value>
            <value>
                <fullName>Cisco UC5xx Release 7 to 7.4</fullName>
            </value>
            <value>
                <fullName>Cisco UCM Release 6.1 to 12.4</fullName>
            </value>
            <value>
                <fullName>Digium Switchvox Release 4.5 to 4.5</fullName>
            </value>
            <value>
                <fullName>DrayTek Vigor  IP PBX 2820  Release 3.5.6 to 3.5.6</fullName>
            </value>
            <value>
                <fullName>Fonality Trixbox Release 4.1.1 to 4.1.1</fullName>
            </value>
            <value>
                <fullName>HP/3COM VCX via Siparator/Mediant</fullName>
            </value>
            <value>
                <fullName>Ingate SIParator</fullName>
            </value>
            <value>
                <fullName>Interactive Intel TsServer Release 3.12.11.12408</fullName>
            </value>
            <value>
                <fullName>Iwatsu ECS via Siparator/Mediant</fullName>
            </value>
            <value>
                <fullName>Mediant 1000 (INTEROP W/LYNC)</fullName>
            </value>
            <value>
                <fullName>Mitel 5000 Release 4.0 R24 to 6.0.9.61</fullName>
            </value>
            <value>
                <fullName>Mitel MCD/3300 6.0 Release 9.0.1 to 12.0.0.52 </fullName>
            </value>
            <value>
                <fullName>NEC 8100 Release 4 to 4.0.1</fullName>
            </value>
            <value>
                <fullName>Oracle (Acme Packet) Net-Net 3XXX/4XXX R 5.1 to 6.4.5.476</fullName>
            </value>
            <value>
                <fullName>Panasonic KX-NCP  Release 4.2 to 4.3</fullName>
            </value>
            <value>
                <fullName>Panasonic KX-TDE  Release 2.0502 to 2.0502</fullName>
            </value>
            <value>
                <fullName>Shoretel CM via Siparator/Mediant</fullName>
            </value>
            <value>
                <fullName>Siemens OpenScape Release V7.00.01 to V7.00.01</fullName>
            </value>
            <value>
                <fullName>Toshiba CIX  Release 5.2 to 7.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>