objects/Technical_Information__c/fields/Site_to_Site_VPN_PRI_LOC__c.field-meta.xml
<CustomField>
    <fullName>Site_to_Site_VPN_PRI_LOC__c</fullName>
    <description>Primary Address</description>
    <label>Site to Site VPN PRI LOC</label>
    <type>TextArea</type>
</CustomField>