objects/Technical_Information__c/fields/SLA_Latency_Objective__c.field-meta.xml
<CustomField>
    <fullName>SLA_Latency_Objective__c</fullName>
    <formula>CASE( EVC_Mileage__c , 
&#39;0 - 24 Miles&#39;, &#39;5 ms&#39;, 
&#39;25 - 99 Miles&#39;, &#39;6 ms&#39;, 
&#39;100 - 249 Miles&#39;, &#39;7 ms&#39;, 
&#39;245 - 500 Miles&#39;, &#39;11 ms&#39;, 
&#39;501 - 999 Miles&#39;, &#39;15 ms&#39;, 
&#39;1000 - 2499 Miles&#39;, &#39;27 ms&#39;, 
&#39;N/A&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Latency Objective</label>
    <type>Text</type>
</CustomField>