objects/Technical_Information__c/fields/Sold_Speed__c.field-meta.xml
<CustomField>
    <fullName>Sold_Speed__c</fullName>
    <label>Sold Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5M</fullName>
            </value>
            <value>
                <fullName>10M</fullName>
            </value>
            <value>
                <fullName>15M</fullName>
            </value>
            <value>
                <fullName>20M</fullName>
            </value>
            <value>
                <fullName>30M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>