objects/Technical_Information__c/fields/Special_web_hosting_notes__c.field-meta.xml
<CustomField>
    <fullName>Special_web_hosting_notes__c</fullName>
    <label>Special web hosting notes</label>
    <type>TextArea</type>
</CustomField>