objects/Technical_Information__c/fields/Subnet_Size__c.field-meta.xml
<CustomField>
    <fullName>Subnet_Size__c</fullName>
    <label>Subnet Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>