objects/Technical_Information__c/fields/Sufficient_backboard_space__c.field-meta.xml
<CustomField>
    <fullName>Sufficient_backboard_space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sufficient backboard space</label>
    <type>Checkbox</type>
</CustomField>