objects/Technical_Information__c/fields/Summary_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summary of Work</label>
    <type>Checkbox</type>
</CustomField>