objects/Technical_Information__c/fields/SummaryOfWork__c.field-meta.xml
<CustomField>
    <fullName>SummaryOfWork__c</fullName>
    <label>Summary Of Work</label>
    <type>TextArea</type>
</CustomField>