objects/Technical_Information__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA (Terms &amp; Conditions)</label>
    <type>Checkbox</type>
</CustomField>