objects/Technical_Information__c/fields/Toll_Free_Provider__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Provider__c</fullName>
    <label>Toll Free Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>