objects/Technical_Information__c/fields/Trunk_Emulation__c.field-meta.xml
<CustomField>
    <fullName>Trunk_Emulation__c</fullName>
    <label>Trunk Emulation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E&amp;M Wink (DID&#39;s Only)</fullName>
            </value>
            <value>
                <fullName>Loop</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>