objects/Technical_Information__c/fields/VLAN_ID__c.field-meta.xml
<CustomField>
    <fullName>VLAN_ID__c</fullName>
    <label>VLAN ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>