objects/Technical_Information__c/fields/Voicemail_Menu_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Menu_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voicemail Configuration</label>
    <type>Checkbox</type>
</CustomField>