objects/Technical_Information__c/fields/Voicemail_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_to_Email__c</fullName>
    <label>Voicemail to Email</label>
    <type>Email</type>
</CustomField>