objects/Technical_Information__c/fields/VoIP_over_Internet_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>VoIP_over_Internet_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VoIP over Internet Disclaimer</label>
    <type>Checkbox</type>
</CustomField>