objects/Technical_Information__c/fields/VPN_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>VPN_Access_Type__c</fullName>
    <label>VPN Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T1 - On Net</fullName>
            </value>
            <value>
                <fullName>T1 - EEL</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) - On Net</fullName>
            </value>
            <value>
                <fullName>Metro Ethernet (EoF) - On Net</fullName>
            </value>
            <value>
                <fullName>DSL - On Net</fullName>
            </value>
            <value>
                <fullName>Broadband - On Net</fullName>
            </value>
            <value>
                <fullName>DSL Dedicated - On Net</fullName>
            </value>
            <value>
                <fullName>Broadband Dedicated - On Net</fullName>
            </value>
            <value>
                <fullName>High Bandwidth - On Net</fullName>
            </value>
            <value>
                <fullName>Metro Ethernet (EoF): Ethernet over Sonet - On-Net</fullName>
            </value>
            <value>
                <fullName>Metro Ethernet (EoF) (On-Net) Ethernet over Sonet - Gig E</fullName>
            </value>
            <value>
                <fullName>Metro Ethernet (EoF)  (Off-Net) Ethernet via Solarus</fullName>
            </value>
            <value>
                <fullName>Metro Ethernet (EoF) (Off-Net) Ethernet via WIN</fullName>
            </value>
            <value>
                <fullName>Metro Ethernet (EoF) (Off-Net) Ethernet via Zayo</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) Extended  -  XO</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) Extended  - GX</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) Extended - Ethernet GX</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) - Extended - QMOE</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC)- Extended - Adv. - Utopia Gold</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) Extended - Fast Ethernet LS Networks</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) Extended GigE LS Networks</fullName>
            </value>
            <value>
                <fullName>Metro Ethernet (EoF) (Off-Net) Ethernet via Solarus</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) Extended - QMOE</fullName>
            </value>
            <value>
                <fullName>Ethernet Solutions (EoC) Extended - Adv. - Utopia Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>