objects/Technical_Information__c/fields/X2nd_Delay_Ring_Timer__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Delay_Ring_Timer__c</fullName>
    <label>2nd Delay Ring Timer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8 sec</fullName>
            </value>
            <value>
                <fullName>12 sec</fullName>
            </value>
            <value>
                <fullName>16 sec</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>