objects/Technical_Information__c/fields/Z_Loc_Address__c.field-meta.xml
<CustomField>
    <fullName>Z_Loc_Address__c</fullName>
    <inlineHelpText>Enter Z location address here</inlineHelpText>
    <label>Z Loc Address</label>
    <type>TextArea</type>
</CustomField>