objects/Technical_Information__c/recordTypes/Additional_Voice_Services.recordType-meta.xml
<RecordType>
    <fullName>Additional_Voice_Services</fullName>
    <active>true</active>
    <label>06 - Conference Now &amp; Account Codes</label>
</RecordType>