objects/Technical_Information__c/recordTypes/DID.recordType-meta.xml
<RecordType>
    <fullName>DID</fullName>
    <active>true</active>
    <label>04 – DID’s and Virtual TN&#39;s</label>
</RecordType>