objects/Technical_Information__c/recordTypes/Directory_Listing.recordType-meta.xml
<RecordType>
    <fullName>Directory_Listing</fullName>
    <active>true</active>
    <label>08 – Directory Listing</label>
</RecordType>