objects/Technical_Information__c/recordTypes/Ethernet_Services_EPL_Tech_Form.recordType-meta.xml
<RecordType>
    <fullName>Ethernet_Services_EPL_Tech_Form</fullName>
    <active>true</active>
    <label>13 - Ethernet Services – Tech Form</label>
</RecordType>