objects/Technical_Information__c/recordTypes/Ethernet_Services_EVPL_EVC_Tech_Form.recordType-meta.xml
<RecordType>
    <fullName>Ethernet_Services_EVPL_EVC_Tech_Form</fullName>
    <active>false</active>
    <label>Ethernet Services - EVPL EVC Tech Form</label>
</RecordType>