objects/Technical_Information__c/recordTypes/High_Bandwidth_IP_Configuration.recordType-meta.xml
<RecordType>
    <fullName>High_Bandwidth_IP_Configuration</fullName>
    <active>true</active>
    <label>17- Dedicated Internet EoF/EoSonet/DS-3 Config</label>
</RecordType>