objects/Technical_Information__c/recordTypes/MTS_Site_Information_Document.recordType-meta.xml
<RecordType>
    <fullName>MTS_Site_Information_Document</fullName>
    <active>true</active>
    <description>Hosted/Managed Services Site Information Document</description>
    <label>09 – Hosted/Managed Services Site Information Document</label>
</RecordType>