objects/Technical_Information__c/recordTypes/NNS_Num.recordType-meta.xml
<RecordType>
    <fullName>NNS_Num</fullName>
    <active>true</active>
    <description>NNS Num</description>
    <label>15 - NNS/NUM</label>
</RecordType>