objects/Technical_Information__c/recordTypes/Other_Technical_Notes.recordType-meta.xml
<RecordType>
    <fullName>Other_Technical_Notes</fullName>
    <active>true</active>
    <label>01 - Customer Profile</label>
</RecordType>