objects/Technical_Information__c/recordTypes/Private_Line_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Private_Line_Configuration</fullName>
    <active>true</active>
    <label>18 - Transport Services Configuration</label>
</RecordType>