objects/Technical_Information__c/recordTypes/UC_Cloud_Voice_Tech_Sheet.recordType-meta.xml
<RecordType>
    <fullName>UC_Cloud_Voice_Tech_Sheet</fullName>
    <active>true</active>
    <label>20 - UC Cloud Voice Tech Sheet</label>
</RecordType>