objects/Technical_Information__c/recordTypes/Voice_Internet_Services.recordType-meta.xml
<RecordType>
    <fullName>Voice_Internet_Services</fullName>
    <active>false</active>
    <label>Voice &amp; Internet Services</label>
</RecordType>