objects/Technical_Information__c/recordTypes/Voicemail_Menu_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Voicemail_Menu_Configuration</fullName>
    <active>true</active>
    <description>Voicemail Configuration</description>
    <label>03 – Voicemail Configuration</label>
</RecordType>