objects/Technical_Information__c/recordTypes/VPN_SIP_Vendor_Checklist.recordType-meta.xml
<RecordType>
    <fullName>VPN_SIP_Vendor_Checklist</fullName>
    <active>true</active>
    <label>12 – VPN SIP Vendor Checklist</label>
</RecordType>