objects/Technical_Information__c/recordTypes/X19_Hosted_Voice_Services.recordType-meta.xml
<RecordType>
    <fullName>X19_Hosted_Voice_Services</fullName>
    <active>false</active>
    <description>Hosted Voice Services Technical Information</description>
    <label>19 - Hosted Voice Services</label>
</RecordType>