objects/Technical_Information__c/validationRules/Cannot_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( OwnerId )</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You may not change the owner</errorMessage>
</ValidationRule>