objects/Technical_Information__c/validationRules/Cannot_Change_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( RecordTypeId )</errorConditionFormula>
    <errorMessage>You may not change the Record Type</errorMessage>
</ValidationRule>